--- a/app/Configuracion/ViewMenu.html
+++ b/app/Configuracion/ViewMenu.html
@@ -12,7 +12,7 @@
 <body>
 
 <header >
-    <a href="/MenuP"><h1>Menu</h1></a>
+    <a href="/MenuFAKE"><h1>Menu</h1></a>
 </header>
 
 <div class="notis">
@@ -27,7 +27,6 @@
     <button class="call-account" data-seccion="header" data-valor="Request Account">Solicitar cuenta</button>
 </div>
 
-<div id="navbar-container"></div>
 
 <div class="productos_titulo" id="LinkBebidas" > <i class="fa-solid fa-whiskey-glass"></i> Bebidas </div>
 <div class="menu-container" id="menu-containerBebidas"></div>
@@ -54,5 +53,6 @@
 </div>
 
 <script src="menuProduct.js"></script>
+<script>src="/jMenu.js"</script>
 </body>
 </html>
