--- a/app/Configuracion/menufake.html
+++ b/app/Configuracion/menufake.html
@@ -84,6 +84,7 @@
 <body>
 
 <header>
+    <a href="/Comandas"><h1>GO BACK</h1></a>
     <h1>--------</h1>
     <h1>MENU</h1>
     <h1>--------</h1>
@@ -98,7 +99,7 @@
         <p>Por que gusta empezar?</p>
     </div>
 
-    <a href="/menu">
+    <a href="/vistaMenu">
         <div class="producto">
             <img src="Espagueti.png" alt="Nombre del producto 2">
             <div class="nombreP">Entradas</div>
@@ -109,21 +110,21 @@
 
 
 
-    <a href="/menu">
+    <a href="/vistaMenu">
         <div class="producto">
             <img src="Pizza.png" alt="Nombre del producto 1">
             <div class="nombreP">Platillos Fuerte</div>
         </div>
     </a>
 
-    <a href="/menu">
+    <a href="/vistaMenu">
         <div class="producto">
             <img src="Postres.png" alt="Nombre del producto 3">
             <div class="nombreP">Postres</div>
         </div>
     </a>
 
-    <a href="/menu">
+    <a href="/vistaMenu">
         <div class="producto">
             <img src="Bebidas.png" alt="Nombre del producto 3">
             <div class="nombreP">Bebidas</div>
