--- a/app/PantallaComandas/index.html
+++ b/app/PantallaComandas/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
 
 <head>
+    <link rel="icon" href="Img-prodcut.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantalla de Comandas</title>
     <link rel="stylesheet" href="/Comandas.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head> 
 
 <body>
@@ -13,23 +15,84 @@
         <div id="navbar-configuracion" class="navbar-configuracion"></div>
     </header>
     
-    <div class="titulo">
-        <h2>Comandas Recientes</h2>
-    </div>
-
     <body>
         <main>
-            <section id="comandas"></section>
-        </main>
-        <main>
-            <section id="notis-soli"></section>
+            <div id="contenedor">
+                <div id="comandas"></div>
+                <div id="notificaciones"></div>
+            </div>
         </main>
     </body>
 
-    <footer id="footer">
-        <p>&copy; 2024 QR SERVICE. TODOS LOS DERECHOS RESERVADOS</p>
-    </footer>
+    <div id="navbar-footer"></div>;
 
+    <script>
+        fetch('/header')
+           .then(response => response.text())
+           .then(data => {
+               // Insertar el HTML en el contenedor
+               document.getElementById('navbar-configuracion').innerHTML = data;
+               
+               const scripts = document.getElementById('navbar-configuracion').querySelectorAll('script');
+
+                scripts.forEach(script => {
+                const newScript = document.createElement('script');
+                newScript.textContent = script.textContent; 
+                document.body.appendChild(newScript); 
+                script.remove(); 
+             });
+           })
+           .catch(error => console.error('Error al cargar el navbar:', error));
+
+           fetch('/Footer')
+            .then(response => response.text())
+            .then(data => {
+            document.getElementById('navbar-footer').innerHTML = data;
+            })
+            .catch(error => console.error('Error al cargar el navbar:', error));
+
+    // Establecer la conexión con el servidor WebSocket
+    const socket = new WebSocket('ws://localhost:3500');
+
+    // Manejo de la conexión
+    socket.onopen = () => {
+        console.log('Conectado al WebSocket.');
+    };
+
+    socket.onerror = (error) => {
+        console.error('Error en la conexión WebSocket:', error);
+    };
+
+    // Manejo de mensajes entrantes desde el WebSocket
+    socket.onmessage = (event) => {
+        const data = JSON.parse(event.data);
+
+        if (data.type === 'call_waiter' || data.type === 'request_account') {
+            agregarComanda(data.message, data.mesa);
+        }
+    };
+
+    // Función para agregar una nueva comanda a la pantalla
+    function agregarComanda(mensaje, mesa) {
+        const seccionComandas = document.getElementById('notificaciones');
+
+        // Crear un elemento para la nueva comanda
+        const nuevaComanda = document.createElement('div');
+        nuevaComanda.classList.add('notificacion'); // Clase para estilos
+        nuevaComanda.innerHTML = `
+            <p><strong>Mesa:</strong> ${mesa}</p>
+            <p><strong>Notificación:</strong> ${mensaje}</p>
+        `;
+
+        // Agregar la nueva comanda al inicio de la lista
+        seccionComandas.prepend(nuevaComanda);
+
+        // Opcional: remover la notificación después de un tiempo
+        setTimeout(() => {
+            nuevaComanda.remove();
+        }, 5000); // 5
+    }
+    </script>
     <script src="Comandas.js"></script>
     <script src="https://kit.fontawesome.com/dc58fd35be.js" crossorigin="anonymous"></script>
 </body>
