--- a/app/Configuracion/grafica_ventas.html
+++ b/app/Configuracion/grafica_ventas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="Img-prodcut.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,31 +14,8 @@
     </header>
 
     <div class="titulo">
-        <h2> Grafica de ventas</h2>
+        <h2 id="titulo"> Grafica de ventas</h2>
     </div>
-<!-- Navbar -->
-<!-- <nav style="margin: 100px;" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Admin Restaurante</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Órdenes</a>
-                </li>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="admin.html">Volver</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav> -->
     <div class="row mt-4">
         <div class="col-md-12">
             <div class="card">
@@ -50,6 +28,8 @@
             </div>
         </div>
     </div>
+
+    <div id="navbar-footer"></div>
     <!-- Sección de scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -80,21 +60,29 @@
     });
 
     // Navbar de configuracion
-    fetch('/NavbarConfiguracion')
+    fetch('/header')
            .then(response => response.text())
            .then(data => {
                // Insertar el HTML en el contenedor
                document.getElementById('navbar-configuracion').innerHTML = data;
-               document.getElementById("titulo").innerHTML = "Grafica de ventas";
 
-               // Crear un script para ejecutar el contenido JS de Producto.js
-               const script = document.createElement('script');
-               script.onload = () => {
-                   console.log('El script se cargó y ejecutó correctamente');
-               };
-               document.body.appendChild(script);
+               const scripts = document.getElementById('navbar-configuracion').querySelectorAll('script');
+
+                scripts.forEach(script => {
+                const newScript = document.createElement('script');
+                newScript.textContent = script.textContent; 
+                document.body.appendChild(newScript); 
+                script.remove(); 
+             });
            })
            .catch(error => console.error('Error al cargar el navbar:', error));
+
+           fetch('/Footer')
+            .then(response => response.text())
+            .then(data => {
+            document.getElementById('navbar-footer').innerHTML = data;
+            })
+            .catch(error => console.error('Error al cargar el navbar:', error));
 </script>
 </body>
 </html>
