--- a/app/Menu/navbar.html
+++ b/app/Menu/navbar.html
@@ -39,7 +39,7 @@
         </div>
 
         <nav class="navbar" id="navbar">
-            <h1 data-seccion="header" data-valor="Table" id="Mesa" class="mesa"></h1>
+            <h1 data-seccion="header" data-valor="Table" id="Mesa" class="mesa">Mesa 1</h1>
             <button class="Abrir-menu" id="abrir"><i class="bi bi-menu-up"></i></button>
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-square"></i></button>
 
@@ -78,7 +78,6 @@
                 <tr>
                     <th><input style="padding-left:4px; margin: 0%;" type="text" placeholder="Añada comentarios" class="coment" id="coment">
                     </th>
-                    <th><button id="ComentEnviar"></button></th>
                 </tr>
                 <tr>  
                     <th>TOTAL:</th>
@@ -86,7 +85,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <button class="enviar-t" id="enviar-t">Enviar</button>
+                        <button id="enviar-t" class="enviar-t">Enviar</button>
                     </td>
                 </tr>
             </tfoot>
@@ -94,7 +93,7 @@
     </div>
 </body>
 
-<script src="/NavBar.js"></script>
-
+<script src="/NavBar.js" id="navbar-js"></script>
+<script src="/jMenu.js"></script>
 
 </html>
